# HyperCompute

./: CMakeLists.txt  README.md
kernel/: kernel.cl
src/: main.cpp
